<resources>
    <string name="app_name">Stopwatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Lap">Lap</string>
    <string name="Reset">Reset</string>
    <string name="Help">Help</string>
    <string name="help_text">
        Here you will find useful information about the apps features.\n\n
        Start - Starts the stopwatch.\n
        Stop - Stops the stopwatch.\n
        Lap - Elapsed time to the current point.\n
        Reset - Resets the stopwatch.
    </string>
    <string name="Pause">Pause</string>
    <string name="spaceship">Spaceship</string>
    <string name="planet">Planet</string>
</resources>